2015-11-19  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_optim_fminsearch.m: Do not try to detect fminsearch

	* misc/optim/@stk_optim_fminsearch/stk_optim_fminsearch.m: Do not
	try to detect at this point whether fminsearch is available.

2015-11-15  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_init.m: Remove STK's root from the path if needed

	* stk_init.m (stk_init__pkg_unload): Remove STK's root from the
	path if needed.
	(stk_init__rmpath): Remove verbose comment.
	* admin/octpkg/patches/prevent-PKG_DEL-loop.patch: New patch.
	* admin/octpkg/patches/series: Add new patch to the series.
	* admin/octpkg/patches/remove-buildmex.patch: Refresh patch.
	* admin/octpkg/patches/remove-testprivatemex.patch: Refresh patch.

	stk_init.m: No need to remove other copies of STK from the path

	* stk_init.m (stk_init__rmpath): No need to remove other copies of
	STK from the search path. Even if several copies are on the path,
	only the most recently installed is visible.
	* admin/octpkg/patches/remove-buildmex.patch: Refresh patch.
	* admin/octpkg/patches/remove-testprivatemex.patch: Refresh patch.

	Merge config/* functions into stk_init

	* config/stk_config_addpath.m: Replaced by stk_init__addpath.
	* config/stk_config_buildmex.m: Replaced by stk_init__build_mex.
	* config/stk_config_clearpersistents.m: Replaced by
	stk_init__clear_persistents.
	* config/stk_config_getroot.m: Removed.
	* config/stk_config_makeinfo.m: Replaced by stk_init__get_make_info.
	* config/stk_config_mole.m: Replaced by stk_init__config_mole.
	* config/stk_config_path.m: Replaced by stk_init__genpath.
	* config/stk_config_rmpath.m: Replaced by stk_init__rmpath.
	* config/stk_config_setup.m: Merged into stk_init__pk_load.
	* config/stk_config_testprivatemex.m: Replaced by
	stk_init__test_private_mex.
	* stk_runtests.m: Use stk_init genpath.
	* stk_init.m: Integrate config/* functions as subfunctions and
	introduce a public interface that makes it easy to call them