@@ -175,6 +175,9 @@ x = struct ('data', x_data, ...
 
 x = class (x, 'stk_dataframe');
 
+% Starting with Matlab R2014b, graphics handles are objects
+superiorto ('matlab.graphics.axis.Axes');
+
 end % function @stk_dataframe.stk_dataframe
 
 
